// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can generate a sidebar default 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "label": "Overview",
      },
      Object {
        "items": Array [
          Object {
            "id": "index",
            "label": "Overview",
          },
          Object {
            "items": Array [
              Object {
                "id": "addon",
                "label": "Overview",
              },
              Object {
                "id": "addon.component",
                "label": "(constructor)",
              },
              Object {
                "id": "addon.component",
                "label": "args",
              },
            ],
            "label": "Component",
          },
          Object {
            "items": Array [
              Object {
                "id": "addon",
                "label": "Overview",
              },
              Object {
                "id": "addon.stepper",
                "label": "foo",
              },
              Object {
                "id": "addon.stepper",
                "label": "render",
              },
            ],
            "label": "Stepper",
          },
          Object {
            "id": "addon",
            "label": "StepperSignature",
          },
          Object {
            "id": "addon",
            "label": "sum",
          },
        ],
        "label": "addon",
      },
    ],
    "label": "Packages",
  },
]
`;

exports[`delegate can be used to customize frontmatter 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component.(constructor) -- CUSTOM THINGY foo/addon.component._constructor_.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component.args property -- CUSTOM THINGY foo/addon.component.args.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component class -- CUSTOM THINGY foo/addon.component.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: addon package -- CUSTOM THINGY foo/addon.md
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper.foo() method -- CUSTOM THINGY foo/addon.stepper.foo.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper Component -- CUSTOM THINGY foo/addon.stepper.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper.render() method -- CUSTOM THINGY foo/addon.stepper.render.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: StepperSignature Component Signature -- CUSTOM THINGY foo/addon.steppersignature.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: sum() Helper -- CUSTOM THINGY foo/addon.sum.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: API Reference -- CUSTOM THINGY foo/index.md
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`delegate can be used to customize the page 1`] = `
Object {
  "foo/index.md": "\`\`\`typescript
const foo = \\"Bar\\";
\`\`\`
",
}
`;

exports[`delegate can be used to register custom nodes 1`] = `
Object {
  "foo/index.md": "🎉 NEAT 🎉
",
}
`;

exports[`delegate can be used to register custom nodes that require recursion 1`] = `
Object {
  "foo/index.md": " 🎉 FUN 🎉 🎉 TIME 🎉 🎉 CONTAINER 🎉 🎉 CHILDREN 🎉
",
}
`;

exports[`if a custom delegate is passed with only the required fields the default implementation runs for the methods 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`it defaults to built in delegate 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`kitchen sink 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;
